src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>MSB_Check_Number__c</fullName>
        <inlineHelpText>Enter &quot;CASH&quot; if they paid in cash instead of check.</inlineHelpText>
        <label>Check Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSB_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Household</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MSB_Lane__c</fullName>
        <label>Lane Number</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MSB_of_Members__c</fullName>
        <label># of Members</label>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>MSB_BowlingApplication</fullName>
        <active>true</active>
        <description>Specific to Mother-Son Bowling Event</description>
        <label>Bowling Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>MSB_Event</fullName>
        <active>true</active>
        <description>For tracking the different Mother-Son Bowling events each year</description>
        <label>Event</label>
    </recordTypes>
</CustomObject>